tests/errors/str_minus.ptt
spark {
  x is "hello" - "world"
}
